@@ -547,6 +547,8 @@
 
 	define('GRAPH_ZERO_LINE_COLOR_LEFT',	'AAAAAA');
 	define('GRAPH_ZERO_LINE_COLOR_RIGHT',	'888888');
+	
+	define('GRAPH_TRIGGER_LINE_OPPOSITE_COLOR',	'000');
 
 	define('ZBX_MAX_TREND_DIFF',		3600);
 
